# OC_labs

.devcontainer/: Dockerfile
kp/: CMakeLists.txt
kp/src/: cheker.cpp
lab1/: CMakeLists.txt  ChildProcess.c  CreateProcess.c
lab2/: CMakeLists.txt  grafic.py  main.c
lab2/include/: MedianFilter.h
lab2/src/: MedianFilter.c
lab3/: CMakeLists.txt  ChildProcess.c  CreateProcess.c
lab4/: CMakeLists.txt
lab4/include/: methods.h
lab4/lib/: libmethods1.c  libmethods2.c
lab4/src/: main_dynamic.c  main_static.c
lab5-7/: CmakeLists.txt  master.cpp  msg.h  tree.hpp  worker.cpp
lab57/: CmakeLists.txt
lab57/include/: manage_node.h  msg.h  tree.hpp
lab57/src/: manage_main.cpp  manage_node.cpp  node.cpp  tree.cpp
