cmake_minimum_required(VERSION 3.10)

# ????????????? ??? ???????
project(MedianFilter)

# ????????????? ???????? ????? C
set(CMAKE_C_STANDARD 99)

# ????????? ?????????? ??? ???????????? ??????
include_directories(include)

# ????????? ???????? ?????
set(SOURCE_FILES
    main.c
    src/MedianFilter.c
)

# ????????? ??????????? ????
add_executable(program ${SOURCE_FILES})

# ????????? ?????????? pthread
target_link_libraries(program pthread)