cmake_minimum_required(VERSION 3.10)

# ???????? ???????
project(lab4)

# ??????????? ?????????? ? ????????????? ???????
include_directories(include)

# ???????? ??????????? ?????????
add_library(methods1 SHARED lib/libmethods1.c)
add_library(methods2 SHARED lib/libmethods2.c)

# ???????? ??????????? ??????
add_executable(test_static src/main_static.c)
add_executable(test_dynamic src/main_dynamic.c)

# ???????? ????????? ? ????????????
target_link_libraries(methods1 m)  # ???????? methods1 ? libm
target_link_libraries(methods2 m)  # ???????? methods2 ? libm

target_link_libraries(test_static methods1)  # ???????? test_static ? methods1
target_link_libraries(test_dynamic dl methods2)  # ???????? test_dynamic ? dl ? methods2